# OS-ImGui-Android

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: OS-ImGui.h  OS-ImGui_Base.h  OS-ImGui_Exception.hpp  OS-ImGui_Struct.h
include/imgui/: imgui.h  stb_image.h
include/utils/: NativeSurfaceUtils.h  touch.h
outputs/arm64-v8a/: OSImGui
src/: main_demo.cpp
src/OSImGui/: OS-ImGui.cpp  OS-ImGui_Base.cpp
src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  stb_image.cpp
src/utils/: touch.cpp
